| Summary: | ASTERISK-27095: chan_pjsip: When connected_line_method is set to invite, we're not trying UPDATE | ||
| Reporter: | George Joseph (gjoseph) | Labels: | pjsip |
| Date Opened: | 2017-06-29 14:58:05 | Date Closed: | 2017-08-16 06:56:06 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.16.0 14.5.0 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The connected_line_method option in PJSIP when set to "invite" is supposed to use UPDATE when present but fall back to INVITE when it isn't. [~rmudgett] and [~jcolp] took a look and don't believe this is the case. This issue is for verifying the functionality, and if it doesn't work like that to fix it (hopefully in Asterisk).
| ||
| Comments: | By: nappsoft (nappsoft) 2018-11-26 04:09:30.543-0600 This seems to be broken again: - I've noticed this with asterisk 13.23.1, pjproject-2.8 and a Mitel 6869i phone which sends the following Allow header: Allow: OPTIONS, SUBSCRIBE, NOTIFY, PUBLISH, INVITE, ACK, BYE, CANCEL, UPDATE, PRACK, REGISTER, MESSAGE, REFER As long as connected_line_method is not set to update, Asterisk will send an INVITE message instead of an UPDATE message By: Joshua C. Colp (jcolp) 2018-11-26 04:45:22.899-0600 [~nappsoft] Please file a new issue with packet trace and information. By: Friendly Automation (friendly-automation) 2018-12-12 10:53:08.953-0600 Change 10722 merged by George Joseph: pjproject_bundled: check whether UPDATE is supported on outgoing calls [https://gerrit.asterisk.org/10722|https://gerrit.asterisk.org/10722] By: Friendly Automation (friendly-automation) 2018-12-12 10:53:22.197-0600 Change 10717 merged by George Joseph: pjproject_bundled: check whether UPDATE is supported on outgoing calls [https://gerrit.asterisk.org/10717|https://gerrit.asterisk.org/10717] By: Friendly Automation (friendly-automation) 2018-12-12 11:02:50.193-0600 Change 10721 merged by Joshua C. Colp: pjproject_bundled: check whether UPDATE is supported on outgoing calls [https://gerrit.asterisk.org/10721|https://gerrit.asterisk.org/10721] | ||